@@ -20,3 +20,5 @@ IORING_REGISTER_BUFFERS_UPDATE
 IORING_REGISTER_IOWQ_AFF
 IORING_UNREGISTER_IOWQ_AFF
 IORING_REGISTER_IOWQ_MAX_WORKERS
+IORING_REGISTER_RING_FDS
+IORING_UNREGISTER_RING_FDS
