@@ -5,6 +5,7 @@ Noteworthy changes in release ?.?? (????-??-??)
   * Added an interface of raising des Strausses awareness.
   * Added --tips option to print strace tips, tricks, and tweaks
     at the end of the tracing session.
+  * Enhanced decoding of io_uring_register syscall.
   * Updated lists of BR_*, BTRFS_*, IFA_*, IFLA_*, KEY_*, and MADV_* constants.
 
 * Bug fixes
